 2010-09-03 12:43  paul_reeves 
   M builds/install/arch-specific/win32/installation_readme.txt
Remove reference to RC

 2010-09-03 12:35  paul_reeves 
   M builds/install/arch-specific/win32/Readme.txt
Use correct link to browse tracker.
Remove reference to RC

 2010-09-02 18:10  dimitr 
   M src/jrd/build_no.h
   M src/misc/writeBuildNum.sh
Update.

 2010-09-02 15:02  dimitr 
   D builds/win32/msvc7/gds32.vcproj
   D builds/win32/msvc8/gds32.vcproj
   M src/jrd/isc_version.h
   D src/jrd/isc_version.rc
Cleanup.

 2010-09-02 13:47  dimitr 
   M doc/WhatsNew
Update.

 2010-09-01 15:35  asfernandes 
   M src/jrd/trig.h
Fixed CORE-3101 - Cannot alter the domain after migrating from older versions

 2010-08-27 02:51  asfernandes 
   M src/jrd/jrd.cpp
Fixed CORE-3109 - [Crash] isc_dql_exec_immed3_m for "create database ..." and NULL transaction

 2010-08-26 10:52  alexpeshkoff 
   M src/jrd/why.cpp
Fixed CORE-3117: After an error in GDS_CLOSE_BLOB() blob handle becomes invalid

 2010-08-25 08:00  dimitr 
   M src/jrd/cmp.cpp
Fixed a few suspicious places related to the variable cloning.

 2010-08-23 11:39  alexpeshkoff 
   M src/utilities/gsec/gsec.cpp
Fixed CORE-3116: gsec outputs list of users to stderr instead stdout

 2010-08-23 10:06  alexpeshkoff 
   M src/jrd/sqz.cpp
Applied suggested by Dmitry Kovalenko fix - it helps avoid AV when buffer is allocated exactly at the end of physical memory segment

 2010-08-11 10:50  dimitr 
   M src/jrd/Optimizer.cpp
   M src/jrd/Optimizer.h
   M src/jrd/opt.cpp
More complete solution for CORE-2822: Error "no current row for fetch operation" when subquery includes a non-trivial derived table.
It's also expected to fix CORE-3103: Select statement with more non indexed reads in version 2.5RC3 as in version 2.1.3.
Patch for trunk will follow a bit later.

 2010-08-11 07:36  dimitr 
   M src/common/classes/alloc.cpp
   M src/common/classes/alloc.h